implement swagger into project
